@@ -1,5 +1,8 @@
 2016-09-08  Jakub Jelinek  <jakub@redhat.com>
 
+	PR fortran/77500
+	* gfortran.dg/gomp/pr77500.f90: New test.
+
 	PR fortran/77516
 	* gfortran.dg/gomp/pr77516.f90: New test.
 
